--- a/ex html css/style.css
+++ b/ex html css/style.css
@@ -16,6 +16,7 @@ body{
 header, .footer {
     text-align: center;
     background-color: #333;
+    
     color : white;
     padding: 20px;
     
@@ -24,7 +25,6 @@ header, .footer {
 .main {
     display: flex;
     flex-direction: row;
-   
     padding: 20px;
     gap: 10px;
 }
@@ -100,6 +100,21 @@ input[type="submit"]:hover,
 input[type="reset"]:hover{
     background-color: green;
     color: aqua;
+}
+.block {
+    display: flex;
+    flex-direction: row;
+    
+    
+    padding: 10px 5px;
+   
+}
+@media screen and (min-width: 320px) {
+    header, .footer {
+        width: 100%;
+        
+    }
+    
 }
 
 
