--- a/ex2 html/style.css
+++ b/ex2 html/style.css
@@ -14,6 +14,7 @@ nav{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    position: relative;
     
 }
 ul{
@@ -36,10 +37,22 @@ ul{
 footer{
     background-color: #333;
     color: white;
-    width: 100%;
+    
     height: 80px;
+    display: flex;
+    flex-direction: column;
+    
+    
+}
+.icon{
+   
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+.span{
     
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
